--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<div>
+    <nav class="home-page">
+        <a href="index.html"> Home</a>
+        <a href="facts.html">Fun Facts</a>
+        <a href="gallery.html"> Gallery</a>
+    </nav>
+</div>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"content="width=device=width, omotoa;=scale=1.0">
@@ -7,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <wbr>
-<body class="home-page">
+<body class="idk">
     <h1 class="titlepage">--Fisch--</h1>
     <h2>Fisch...</h2>
     <ul>
@@ -23,7 +31,7 @@
     </ul>
     <button class="button">Click Here if you like or play Fisch (This doesn't do anything)</button>
     <h2></h2>
-    <img src="https://s.yimg.com/fz/api/res/1.2/bXAtsxPUc_HZnBwVeGUz8A--~C/YXBwaWQ9c3JjaGRkO2ZpPWZpdDtoPTI2MDtxPTgwO3c9MjYw/https://s.yimg.com/zb/imgv1/7ae5d6bc-828a-3ff2-ac50-5fda0d3da418/t_500x300" Height =240 >
+    <img class="center"src="https://s.yimg.com/fz/api/res/1.2/bXAtsxPUc_HZnBwVeGUz8A--~C/YXBwaWQ9c3JjaGRkO2ZpPWZpdDtoPTI2MDtxPTgwO3c9MjYw/https://s.yimg.com/zb/imgv1/7ae5d6bc-828a-3ff2-ac50-5fda0d3da418/t_500x300" Height =240 >
     <h2></h2>
     <a class="link" href="https://fisch.fandom.com/wiki/Fisch_Wiki">Click Here for the Fisch Wiki</a>
 
