--- a/facts.html
+++ b/facts.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<div>
-    <nav class="home-page">
-        <a href="index.html"> Home</a>
-        <a href="facts.html">Fun Facts</a>
-        <a href="gallery.html"> Gallery</a>
-    </nav>
-</div>
+
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <wbr>
-<body class="idk">
+<body class="facts-page">
+    <div>
+        <nav class="nav-bar">
+            <a href="index.html"> Home</a>
+            <a href="facts.html">Fun Facts</a>
+            <a href="gallery.html"> Gallery</a>
+        </nav>
+    </div>
+    
     <h1 class="titlepage">--Fisch--</h1>
     <h2>Fisch...</h2>
 
