Ples Work or I will drink a pumpkin

--- a/facts.html
+++ b/facts.html
@@ -20,6 +20,11 @@
     
     <h1 class="titlepage">--Fisch--</h1>
     <h2>Fisch...</h2>
+    <ul>
+        <li>Scammers: Appraiser, Minish, Captain of the Mysterious Pirates, the Bubble Mermaid, skin merchants, etc.</li>
+        <li>Nice people: The Albino Vendor</li>
+    
+    </ul>
 
 
 
