--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Fisch</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="home-page">
+<wbr>
+<body class="facts-page">
     <div>
         <nav class="nav-bar">
             <a href="index.html"> Home</a>
@@ -16,24 +17,11 @@
             <a href="gallery.html"> Gallery</a>
         </nav>
     </div>
+    
     <h1 class="titlepage">--Fisch--</h1>
     <h2>Fisch...</h2>
-    <ul>
-        <li>Is fun and relaxing</li>
-        <li>Has scammers (Both <a class="NPCs" href="https://fisch.fandom.com/wiki/NPCs">NPCs</a> and players)</li>
-        <li>Is not a bad game, contrary to what some people think</li>
-        <li>Is played on the <a class = "Roblox"href="roblox.com">Roblox</a> platform</li>
-        <li>Has thousands of variants of <a class="Fish"href="https://fisch.fandom.com/wiki/Bestiary">Fish</a></li>
-        <li>Has regular updates</li>
-        <li>Has lots of different <a class="Rods"href="https://fisch.fandom.com/wiki/Fishing_Rods">Rods</a></li>
-        <li>Includes many different <a class="Baits" href="https://fisch.fandom.com/wiki/Baits">Baits</a></li> 
-
-    </ul>
-    <button class="button">Click Here if you like or play Fisch (This doesn't do anything)</button>
-    <h2></h2>
-    <img class="center"src="https://s.yimg.com/fz/api/res/1.2/bXAtsxPUc_HZnBwVeGUz8A--~C/YXBwaWQ9c3JjaGRkO2ZpPWZpdDtoPTI2MDtxPTgwO3c9MjYw/https://s.yimg.com/zb/imgv1/7ae5d6bc-828a-3ff2-ac50-5fda0d3da418/t_500x300" Height =240 >
-    <h2></h2>
-    <a class="link" href="https://fisch.fandom.com/wiki/Fisch_Wiki">Click Here for the Fisch Wiki</a>
+    <p>Is a relaxing game taking the setting of an open ocean with various islands, all with their own mysteries and quest lines. Fisch also includes various purchaseable rods, giving better or worse stats, which will allow players on a captivating journey to catch countless variants of fish, both well-known and exotic.</p>
+    
 
 
 </body>
