I AM DRINKING A PUMPKIN

--- a/gallery.html
+++ b/gallery.html
@@ -21,24 +21,15 @@
     <h1 class="titlepage">--Fisch--</h1>
     <h2>The Gallery</h2>
     <div class="GallerySections">        
-        <h3>Section 1: Rare encounters/fish will be posted under this text</h3>
+        <h3>Rare encounters/fish will be posted under this text</h3>
         <div class="Pictures">
-            <button class="galbord"> < </button>
-            <img scr="" height="100" width="100">
-            <button class="galbord"> > </button>
+            <button id = "PrevBut"class="galbord"> < </button>
+            <img id = "GalleryImage" scr="" height="100" width="100">
+            <button id = "NextBut"class="galbord"> > </button>
         </div>
-        <h3>Section 2: Bugs, weird events, etc.</h3>
-        <div class="Pictures">
-            <button class="galbord"> < </button>
-            <img scr="" height="100" width="100">
-            <button class="galbord"> > </button>
-        </div>
-        <h3>Section 3: Tips for beginners in image form</h3>
-        <div class="Pictures">
-            <button class="galbord"> < </button>
-            <img scr="" height="100" width="100">
-            <button class="galbord"> > </button>
-        </div>
+        
+        
     </div>    
+<script src="galleryscript.js"></script>
 </body>
 </html>
