I finished 16 pumpkins via drinking them

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
         <h3>Rare encounters/fish will be posted under this text</h3>
         <div class="Pictures">
             <button id = "PrevBut"class="galbord"> < </button>
-            <img id = "GalleryImage" scr="" height="100" width="100">
+            <img id = "GI" height="100" width="100">
             <button id = "NextBut"class="galbord"> > </button>
         </div>
         
